# Giftify-Bot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  __main__.py  bot.py  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql
.github/: dependabot.yml
cogs/: logger.py  meta.py  timer_manager.py  timers.py  webserver.py
cogs/donations/: __init__.py  donation_autoroles.py  donation_category.py  donation_settings.py  donations.py
cogs/giveaways/: __init__.py  cancel.py  end.py  list.py  reroll.py  start.py  top.py
cogs/raffles/: __init__.py  raffle.py  raffle_deputy.py  raffle_tickets.py
cogs/settings/: __init__.py  button_colour.py  channel_settings.py  colour.py  defaults.py  dm_host.py  dm_host_message.py  dm_message.py  dm_winner.py  end_message.py  gw_end_header.py  gw_header.py  logging.py  managers.py  participants_reaction.py  ping.py  reaction.py  reroll_message.py  view.py
core/: bot.py  db.py  log_handler.py  tree.py
models/: donation_settings.py  giveaway_settings.py  giveaways.py  raffles.py  timers.py
utils/: constants.py  db.py  exceptions.py  functions.py  paginator.py  transformers.py  tree.py  view.py
